knn sklearn add algorithm keyword

--- a/KNeighborsClassifier-with-scikit-learn.ipynb
+++ b/KNeighborsClassifier-with-scikit-learn.ipynb
@@ -45,7 +45,9 @@
    "metadata": {},
    "source": [
     "## Parameters\n",
-    "- `n_neighbors`: Numbers of neighbors (including self) to vote"
+    "- `n_neighbors`: Numbers of neighbors (including self) to vote\n",
+    "- `algorithm`: `'auto'`, `'ball_tree'`, `'kd_tree'`, or `'brute'`  \n",
+    "it only affect the speed but not the outcome. "
    ]
   },
   {
