--- a/KNeighborsClassifier-with-scikit-learn.ipynb
+++ b/KNeighborsClassifier-with-scikit-learn.ipynb
@@ -37,7 +37,7 @@
     "y_new = model.predict(X_test)\n",
     "```\n",
     "\n",
-    "[Official Reference](https://scikit-learn.org/stable/modules/generated/sklearn.neighbors.KNeighborsClassifier.html#sklearn.neighbors.KNeighborsClassifier.kneighbors)"
+    "[Official Reference](https://scikit-learn.org/stable/modules/generated/sklearn.neighbors.KNeighborsClassifier.html)"
    ]
   },
   {
