change data ex1

--- a/DecisionTreeClassifier-with-scikit-learn.ipynb
+++ b/DecisionTreeClassifier-with-scikit-learn.ipynb
@@ -89,14 +89,11 @@
     "##### Exercise 1\n",
     "Let  \n",
     "```python\n",
-    "mu1 = np.array([1,1])\n",
-    "cov1 = np.array([[1.1,-1],\n",
+    "mu = np.array([1,1])\n",
+    "cov = np.array([[1.1,-1],\n",
     "                [-1,1.1]])\n",
-    "mu2 = np.array([-1,-1])\n",
-    "cov2 = np.array([[1.1,-1],\n",
-    "                [-1,1.1]])\n",
-    "X = np.vstack([np.random.multivariate_normal(mu1, cov1, 100), \n",
-    "               np.random.multivariate_normal(mu2, cov2, 100)])\n",
+    "X = np.vstack([np.random.multivariate_normal(mu, cov, 100), \n",
+    "               np.random.multivariate_normal(-mu, cov, 100)])\n",
     "y = np.array([0]*100 + [1]*100)\n",
     "```"
    ]
