--- a/KNeighborsClassifier-from-scratch.ipynb
+++ b/KNeighborsClassifier-from-scratch.ipynb
@@ -269,7 +269,7 @@
    "source": [
     "###### 2(b)\n",
     "Train a $k$-nearest neighbors classification model by `X` an `y` .  \n",
-    "Make a prediction `y_new` for the sample data `X` .  \n",
+    "Make a prediction `y_new` for the training data `X` .  \n",
     "What is the outcome?  \n",
     "Can you give a reason to this phenomenon?"
    ]
