MDS sklearn fix typo

--- a/MDS-with-scikit-learn.ipynb
+++ b/MDS-with-scikit-learn.ipynb
@@ -49,7 +49,7 @@
     "to get a best performance\n",
     "- `dissimilarity`: `\"euclidean\"` or `\"precomputed\"`  \n",
     "if `\"euclidean\"`, use the Euclidean distance matrix as the dissimilarity.  \n",
-    "If `\"precomputed\"`, you have to pass your precomputed dissimilarity matrxi to `model.fit` ."
+    "If `\"precomputed\"`, you have to pass your precomputed dissimilarity matrix to `model.fit` ."
    ]
   },
   {
@@ -467,7 +467,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.9.3"
   }
  },
  "nbformat": 4,
