MDS sklearn fix typo

--- a/MDS-with-scikit-learn.ipynb
+++ b/MDS-with-scikit-learn.ipynb
@@ -422,7 +422,7 @@
    "metadata": {},
    "source": [
     "###### 5(d)\n",
-    "Calculate the stress $\\sum_{i<j}(d_{ij}(X_{\\rm new})^2 - \\delta_{ij})^2$ and compare it with `model.stress_` .  "
+    "Calculate the stress $\\sum_{i<j}(d_{ij}(X_{\\rm new}) - \\delta_{ij})^2$ and compare it with `model.stress_` .  "
    ]
   },
   {
