linear regression scratch fix typo

--- a/LinearRegression-from-scratch.ipynb
+++ b/LinearRegression-from-scratch.ipynb
@@ -141,7 +141,7 @@
     "```python\n",
     "x = np.arange(10)\n",
     "X1 = np.vstack([x]).T\n",
-    "X2 = np.vstack([np.ones_like(x), x])\n",
+    "X2 = np.vstack([np.ones_like(x), x]).T\n",
     "y = 0.5 * x + 3 + 0.3*np.random.randn(10)\n",
     "```\n",
     "Apply your code to `X1` with `fit_intercept=True` and obtain `(predict1, coef1, intercept1)` .  \n",
@@ -341,7 +341,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
