polyreg fix typo both

--- a/PolynomialRegression-with-scikit-learn.ipynb
+++ b/PolynomialRegression-with-scikit-learn.ipynb
@@ -102,7 +102,7 @@
     "###### 1(a)\n",
     "Use `plt.scatter` to plot the points with `x` and `y` .  \n",
     "Use `plt.plot( ..., c='r')` to plot the line with `x_test` and `y_new` .  \n",
-    "Print `model.coef_` and  `model.intercept_` .  \n",
+    "Print `model[1].coef_` and  `model[1].intercept_` .  \n",
     "Can you guess these values by the definition of `y` ?"
    ]
   },
@@ -344,7 +344,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
