--- a/PolynomialRegression-from-scratch.ipynb
+++ b/PolynomialRegression-from-scratch.ipynb
@@ -42,7 +42,7 @@
     "**Steps:**\n",
     "1. Let `X_ex = X**np.arange(1, degree + 1)` .\n",
     "2. Suppose `LR` is your linear regression fuction.  \n",
-    "Let `predict_lin,coef,intercetp = LR(X_ex, **kwargs)` .  \n",
+    "Let `predict_lin,coef,intercept = LR(X_ex, y, **kwargs)` .  \n",
     "3. Define the function `predict` that sends `X_test` to `(X_test**np.arange(1, degree+1)).dot(coef) + intercept` ."
    ]
   },
@@ -298,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
