linear regression scratch fix typo

--- a/LinearRegression-from-scratch.ipynb
+++ b/LinearRegression-from-scratch.ipynb
@@ -49,7 +49,7 @@
     "2. If `algorithm==\"projection\"`, compute ${\\bf v} = (A^\\top A)^{-1}A^\\top {\\bf y}$.\n",
     "3. If `algorithm==\"grad_descent\"`, run the gradient descent algorithm as follows:\n",
     "    1. Pick a random vector ${\\bf v}$ of shape `(dp,)` .\n",
-    "    2. Calculate the gradient $\\nabla = \\frac{2}{N}(A{\\bf v} - y)^\\top A$.\n",
+    "    2. Calculate the gradient $\\nabla = \\frac{2}{N}(A{\\bf v} - {\\bf y})^\\top A$.\n",
     "    3. Update ${\\bf v}$ by ${\\bf v} - \\alpha\\nabla$.\n",
     "    4. Repeat Steps B and C `n_iter` times.\n",
     "4. If `fit_intercept`, let `coef` be ${\\bf v}[1:]$ and `intercept` be ${\\bf v}[0]$; otherwise, let `coef` be ${\\bf v}$ and `intercept` be 0.  \n",
