--- a/LinearRegression-with-scikit-learn.ipynb
+++ b/LinearRegression-with-scikit-learn.ipynb
@@ -133,7 +133,7 @@
     "Let  \n",
     "```python\n",
     "c = 100 * np.random.rand(100)\n",
-    "f = 1.8*x + 32 + 5*np.random.randn(100)\n",
+    "f = 1.8*c + 32 + 5*np.random.randn(100)\n",
     "```\n",
     "be a collection of temperature data of 100 days,  \n",
     "where `c` stores them in Celsius and  \n",
@@ -316,7 +316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
