poly reg scratch fix typo

--- a/PolynomialRegression-from-scratch.ipynb
+++ b/PolynomialRegression-from-scratch.ipynb
@@ -237,9 +237,9 @@
     "When `regularization==None`, the cost function is \n",
     "$$\\frac{1}{N}\\sum_{i=0}^{N-1}\\|f({\\bf x}_i) - y_i\\|^2.$$ \n",
     "When `regularization==\"L1\"`, the cost function is \n",
-    "$$\\frac{1}{N}\\sum_{i=0}^{N-1}\\|f({\\bf x}_i) - y_i\\|^2 + \\sum_{i=0}^{d-1}|c_i|.$$ \n",
+    "$$\\frac{1}{N}\\sum_{i=0}^{N-1}\\|f({\\bf x}_i) - y_i\\|^2 + \\alpha\\sum_{i=0}^{d-1}|c_i|.$$ \n",
     "When `regularization==\"L2\"`, the cost function is \n",
-    "$$\\frac{1}{N}\\sum_{i=0}^{N-1}\\|f({\\bf x}_i) - y_i\\|^2 + \\sum_{i=0}^{d-1}c_i^2.$$ \n",
+    "$$\\frac{1}{N}\\sum_{i=0}^{N-1}\\|f({\\bf x}_i) - y_i\\|^2 + \\alpha\\sum_{i=0}^{d-1}c_i^2.$$ \n",
     "Here ${\\bf x}_i$ are the data, $y_i$ are the labels, and $c_i$ are the coefficients to be solved.\n",
     "\n",
     "The regularization avoids the coefficients being too high."
