poly reg scratch fix typo

--- a/PolynomialRegression-from-scratch.ipynb
+++ b/PolynomialRegression-from-scratch.ipynb
@@ -268,7 +268,7 @@
    "metadata": {},
    "source": [
     "###### 3(b)\n",
-    "When `regularization==\"L2\"`, the correct gradient is `g = g0 + alpha * 2 * v` , where `g0` is the gradient when `regularization==None` .  \n",
+    "When `regularization==\"L2\"`, the correct gradient is `g = g0 + alpha * 2 * c` , where `g0` is the gradient when `regularization==None` .  \n",
     "Update your code for L2."
    ]
   },
