--- a/KNeighborsClassifier-with-scikit-learn.ipynb
+++ b/KNeighborsClassifier-with-scikit-learn.ipynb
@@ -325,9 +325,9 @@
     "X = 5 * np.random.randn(1000,2)\n",
     "lengths = np.linalg.norm(X, axis=1)\n",
     "band1 = (lengths > 1) & (lengths <2)  \n",
-    "band2 = (lengths > 3) & (lengths <4)  \n",
-    "X = X[band1 | band2, :]\n",
-    "y = np.array([0]*band1.shape[0] + [1]*band2.shape[0])\n",
+    "band2 = (lengths > 3) & (lengths <4)\n",
+    "X = np.vstack([X[band1], X[band2]])\n",
+    "y = np.array([0]*band1.sum() + [1]*band2.sum())\n",
     "```"
    ]
   },
@@ -384,7 +384,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
