knn sklearn fix typo

--- a/KNeighborsClassifier-with-scikit-learn.ipynb
+++ b/KNeighborsClassifier-with-scikit-learn.ipynb
@@ -237,7 +237,8 @@
     "Use the following code to load it.  \n",
     "```python\n",
     "from PIL import Image\n",
-    "img = Image.open(\"my_digit.png\").resize(8,8)\n",
+    "img = Image.open(\"my_digit.png\").resize(8,8).convert('L')\n",
+    "arr = 255 - np.array(img) / 16\n",
     "```\n",
     "Does the model give you the right answer?  \n",
     "Each of you can do 5 pictures.  \n",
