--- a/DecisionTreeClassifier-with-scikit-learn.ipynb
+++ b/DecisionTreeClassifier-with-scikit-learn.ipynb
@@ -32,7 +32,7 @@
     "## Code\n",
     "```python\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
-    "model = DecisionTreeClassifier(<parameters)\n",
+    "model = DecisionTreeClassifier(<parameters>)\n",
     "model.fit(X, y)\n",
     "y_new = model.predict(X_test)\n",
     "```\n",
@@ -544,7 +544,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
