decision tree sklearn fix typo

--- a/DecisionTreeClassifier-from-scratch.ipynb
+++ b/DecisionTreeClassifier-from-scratch.ipynb
@@ -49,8 +49,7 @@
     "    3. Compute $\\operatorname{imp}(k)$ as the impurity of labels of $U$.  \n",
     "If $\\operatorname{imp}(k)=0$, then skip this loop.\n",
     "    4. For each feature $f_j$ and each sample point ${\\bf x}_i\\in U$, partition $U$ into two parts $L$ and $R$ by the criteria $f_j({\\bf x}) \\leq f_j({\\bf x}_i)$, calculate the impurity $H_L$ and $H_R$ in each part, and obtain the value  \n",
-    "$$I'_{j,i} = \\frac{|L|}{|U|}H_L + \\frac{|R|}{|U|}H_R,$$\n",
-    "which is a nonpositive value.\n",
+    "$$I'_{j,i} = \\frac{|L|}{|U|}H_L + \\frac{|R|}{|U|}H_R.$$\n",
     "    5. Pick a pair $j$ and $i$ that achieves the minimum $I'_{j,i}$.  \n",
     "Let $\\operatorname{node}({\\bf x})$ be `node_count+1` if ${\\bf x}\\in L$.  \n",
     "Let $\\operatorname{node}({\\bf x})$ be `node_count+2` if ${\\bf x}\\in R$.  \n",
@@ -320,7 +319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
