--- a/KNeighborsClassifier-from-scratch.ipynb
+++ b/KNeighborsClassifier-from-scratch.ipynb
@@ -139,6 +139,7 @@
     "X1 = np.vstack([np.cos(angle), np.sin(angle)]).T\n",
     "X2 = 5 * X1\n",
     "X = np.vstack([X1, X2])\n",
+    "y = np.array([0]*20 + [1]*20)\n",
     "X_sample = 10 * np.random.rand(1000,2) - np.array([5,5])\n",
     "```"
    ]
@@ -300,7 +301,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
