--- a/KNeighborsClassifier-with-scikit-learn.ipynb
+++ b/KNeighborsClassifier-with-scikit-learn.ipynb
@@ -32,7 +32,7 @@
     "## Code\n",
     "```python\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "model = KNeighborsClassifier(<parameters)\n",
+    "model = KNeighborsClassifier(<parameters>)\n",
     "model.fit(X, y)\n",
     "y_new = model.predict(X_test)\n",
     "```\n",
@@ -385,7 +385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
