--- a/DecisionTreeClassifier-from-scratch.ipynb
+++ b/DecisionTreeClassifier-from-scratch.ipynb
@@ -145,6 +145,7 @@
     "X1 = np.vstack([np.cos(angle), np.sin(angle)]).T\n",
     "X2 = 5 * X1\n",
     "X = np.vstack([X1, X2])\n",
+    "y = np.array([0]*20 + [1]*20)\n",
     "X_sample = 10 * np.random.rand(1000,2) - np.array([5,5])\n",
     "```"
    ]
@@ -157,7 +158,7 @@
     "Train a decision tree classification model by `X` and `y` .  \n",
     "Make a prediction of `X_sample` by:  \n",
     "1. your code with different algorithm settings\n",
-    "2. `sklearn.neighbors.KNeighborsClassifier`\n",
+    "2. `sklearn.tree.DecisionTreeClassifier`\n",
     "\n",
     "The results should be the same (or almost the same).  \n",
     "Check if this is true.  \n",
@@ -319,7 +320,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
